--- a/periodos.html
+++ b/periodos.html
@@ -13,5 +13,5 @@
 <font color="#0000FF" size="30px"<b><i><center><a href="periodo 3.html">periodo 3</a></center></i></b>></font>
 <font color="#FF0000" size="30px"<b><i><center><a href="periodo 4.html">periodo 4</a></center></i></b>></font>
 </body>
-<font color="#FFFFFF" size="20px" <b><i><a href="https://yobanytorres.github.io/actividad1/">boton.jpg</a></center></i></b></font>
+<font color="#00FF00" size="20px" <b><i><a href="https://yobanytorres.github.io/actividad1/">actividad 1#</a></center></i></b></font>
 </html>
