--- a/periodos.html
+++ b/periodos.html
@@ -14,5 +14,6 @@
 <font color="#FF0000" size="30px"<b><i><center><a href="periodo 4.html">periodo 4</a></center></i></b>></font>
 </body>
 <center><font color="#00FF00" size="30px" <b><i><a href="https://yobanytorres.github.io/samu/"> inicio</a></i></b></font></center>
+<center><font color="#00FF00" size="30px" <b><i><a href="https://yobanytorres.github.io/samu/"> inicio</a></i></b></font></center>
 
 </html>
