--- a/periodo 1.html
+++ b/periodo 1.html
@@ -6,6 +6,7 @@
 <body background="https://d2skuhm0vrry40.cloudfront.net/2020/articles/2020-08-04-21-13/marvels-avengers-avance-1596571996180.jpg/EG11/resize/1200x-1/marvels-avengers-avance-1596571996180.jpg">
 	
 <center><font color="#00FF00" size="20px" <b><i><a href="https://yobanytorres.github.io/actividad1/">actividad 1#</a></center></i></b></font></center>
+<center><a href="https://yobanytorres.github.io/perio1/">PARCIAL</a></center>
 </body>
 </center>
 
