--- a/periodo 1.html
+++ b/periodo 1.html
@@ -9,7 +9,7 @@
 <font color="#000000" size="40px"<b><i><center><a href="https://yobanytorres.github.io/perio1/">PARCIAL</a></center></i></b></font>
                                                                                                                                                                               
 <center> <font    color="#000000"
-size="30px"<b><i><a href="https://yobanytorres.github.io/activida3/">actividad 3#</a></i></b></font></center>
+<font color="#FF8000" size="30px"<b><i></i><center><a href="https://yobanytorres.github.io/ac/">actividad 3.0#</a></center></b></font>
 </body></center>
 
 </html>
