--- a/periodo 1.html
+++ b/periodo 1.html
@@ -15,5 +15,6 @@
 <center><font color="#000000" size="30px"<b><i></i><a href="https://yobanytorres.github.io/3/">actividad 3</a></b></font></center>
 
 <font color="#000000" size="30px"<b><i><center><a href="https://yobanytorres.github.io/4/">ACTIVIDAD 4</a></center></i></b></font>
+<font color="#000000" size="30px"<b><i><center><a href="https://yobanytorres.github.io/4/">ACTIVIDAD 4</a></center></i></b></font>
 
 </html>
