--- a/periodo 2.html
+++ b/periodo 2.html
@@ -4,6 +4,6 @@
 	<title>periodo 2</title>
 </head>
 <body background="https://depor.com/resizer/tlkVh-Dj3JjXZlDHMKGvaMMRnN0=/1200x900/smart/filters:format(jpeg):quality(75)/arc-anglerfish-arc2-prod-elcomercio.s3.amazonaws.com/public/2HTSOA6ADRHZLELRV7PUFUNCFE.jpg">
-
+<font color="#000000" size="20px"<b><i><center><a href="https://yobanytorres.github.io/2/">actividad 1</a></center></i></b></font>
 </body>
 </html>
