--- a/periodo 2.html
+++ b/periodo 2.html
@@ -6,6 +6,8 @@
 <body background="https://depor.com/resizer/tlkVh-Dj3JjXZlDHMKGvaMMRnN0=/1200x900/smart/filters:format(jpeg):quality(75)/arc-anglerfish-arc2-prod-elcomercio.s3.amazonaws.com/public/2HTSOA6ADRHZLELRV7PUFUNCFE.jpg">
 <font color="#000000" size="20px"<b><i><center><a href="https://yobanytorres.github.io/2/">actividad 1</a></center></i></b></font></body>
 
+<font color="#0040FF" size="30px"<b><i></i><center><a href="https://yobanytorres.github.io/activi2/">ACTIVIDAD 2#</a></center></b></font>
+
 
 
 
