--- a/periodo 4.html
+++ b/periodo 4.html
@@ -4,8 +4,9 @@
 	<title>periodo 4</title>
 </head>
 <body background="https://i.ytimg.com/vi/P7Q0dTTIWqQ/maxresdefault.jpg">
-<center> <font    color="#000000"
 <font color="#FF8000" size="30px"<b><i></i><center><a href="https://yobanytorres.github.io/periodo4/"> actividad 1#</a></center></b></font>
+</body></center>
+
 </body></center>
 </body>
 </html>
