--- a/periodo 4.html
+++ b/periodo 4.html
@@ -6,6 +6,8 @@
 <body background="https://i.ytimg.com/vi/P7Q0dTTIWqQ/maxresdefault.jpg">
 <font color="#FF8000" size="30px"<b><i></i><center><a href="https://yobanytorres.github.io/periodo4/"> actividad 1#</a></center></b></font>
 </body></center>
+<font color="#FF8000" size="30px"<b><i></i><center><a href="https://yobanytorres.github.io/acti/">ACTIVIDAD 2#</a> </center></b></font>
+</body></center>
 
 </body></center>
 </body>
